--- a/.github/workflows/main_awe-n-attire.yml
+++ b/.github/workflows/main_awe-n-attire.yml
@@ -79,8 +79,7 @@ jobs:
   build:
     runs-on: windows-latest
     permissions:
-      contents: read # Required for actions/checkout
-
+      contents: read 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -108,7 +107,7 @@ jobs:
     environment:
       name: 'Production'
     permissions:
-      contents: read # Required for actions/checkout
+      contents: read 
 
     steps:
       - name: Download artifact from build job
